tests/error/modifier_errors/flag_dagger_qubit1.err
Error: Dagger constraint violation (at $FILE:9:8)
  | 
7 | @guppy(daggerable=True)
8 | def test() -> None:
9 |     p = qubit()
  |         ^^^^^^^ This function cannot be called in a daggerable context

Note: The function allocates qubits, which is not allowed in a daggerable
context

Guppy compilation failed due to 1 previous error
